--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "apiRest_rocksBand",
   "scripts": {
+    "start": "node apiRest_rocksBand.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
